--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-remote_theme: "jekyll/minima@1e8a445"
+#remote_theme: "jekyll/minima@1e8a445"
+theme: jekyll-theme-minima
 title: 情報
 description: テスト
 show_downloads: false
